# ngc-container-replicator

./: CREDITS.md  README.md
python/: .gitignore  Dockerfile  Dockerfile.test  MANIFEST.in  Makefile  Makefile.pypi  entrypoint-devel.sh  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
python/nvidia_deepops/: __init__.py  cli.py  progress.py  utils.py
python/nvidia_deepops/docker/: __init__.py
python/nvidia_deepops/docker/client/: __init__.py  base.py  dockercli.py  dockerpy.py
python/nvidia_deepops/docker/registry/: __init__.py  base.py  dgxregistry.py  dockregistry.py  ngcregistry.py
python/tests/: __init__.py  test_nvidia_deepops.py
replicator/: .gitignore  .singularity  Dockerfile  Dockerfile.test  Makefile  Makefile.pypi  README.md  entrypoint-devel.sh  requirements.txt  setup.cfg  setup.py  tox.ini
replicator/ngc_replicator/: __init__.py  ngc_replicator.py  replicator_pb2.py
replicator/scripts/: docker-utils
replicator/tests/: __init__.py  test_ngc_replicator.py
