[bumpversion]
current_version = 0.4.2
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:nvidia_deepops/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bumpversion:file:Makefile]

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
test = pytest

[metadata]
license_file = LICENSE
